--- a/lstyle.css
+++ b/lstyle.css
@@ -3,6 +3,7 @@ body{
 }
 header{
 	padding-right: 5%;
+	width: 100%;
 }
 img{
 	width: 10%;
@@ -10,6 +11,13 @@ img{
 	display: inline-block;
 	
 }
+.top-right {
+    position: absolute;
+    top: 75px;
+    right: 16px;
+    color:red;
+    padding-right: 10px;
+  }
 
 h4{
 	padding-top: 3px;
@@ -27,8 +35,6 @@ h4{
 			transform: translate(-50%,-50%);
 			border-radius: 25px;
 			font-weight: bold;
-
-
 
 }
 #first input[type = "text"],[type = "password"]{
